--- a/css/style.css
+++ b/css/style.css
@@ -4,24 +4,25 @@ body {
     color: black;
 }
 
-.rows {
-    width: 100%;
-    height: 100%;
+.container {
     margin: 1em;
     padding: 1em;
 }
 
-table {
+.table, tr {
     width: 100%;
     height: 100%;
+    border: grey 2px solid;
+    border-radius: 2.5%;
 }
 
-tr {
-    height: 20px;
-}
-
-table, tr, td {
-    border: grey 1px solid;
+td {
+    width: auto;
+    border-style: solid;
+    border-color: grey;
+    font-size: 50px;
+    font-weight: bolder;
+    padding: 1em;
 }
 
 .text-center {
