update index js, style, index html

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ body {
     width: 100%;
     height: 100%;
     border: grey 2px solid;
-    border-radius: 2.5%;
+    border-radius: 10px;
+    padding: 1em;
 }
 
 td {
@@ -23,6 +24,7 @@ td {
     font-size: 50px;
     font-weight: bolder;
     padding: 1em;
+    border-radius: 10px;
 }
 
 .text-center {
