--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     color: rgba(146,210,255,0.49);
-    font: normal 12px sans-serif;
+    font: bold 12px sans-serif;
     color: black;
 }
 
@@ -10,20 +10,18 @@ body {
 }
 
 .table, tr {
-    width: 100%;
-    height: 100%;
     border: grey 2px solid;
     border-radius: 10px;
     padding: 1em;
 }
 
 td {
-    width: auto;
+    width: 3em;
+    height: 3em;
     border-style: solid;
     border-color: grey;
     font-size: 50px;
     font-weight: bolder;
-    padding: 1em;
     border-radius: 10px;
 }
 
@@ -37,4 +35,21 @@ td {
 
 .text-left{
     text-align: left;
+}
+
+h1 {
+    font-size: 2.0em;
+}
+
+.button {
+    border-radius: 4px;
+    border: grey solid thin;
+    background-color: darkgray;
+    width: fit-content;
+    padding: 0.4em;
+}
+
+.button:hover {
+    cursor: pointer;
+    background-color: slategray;
 }
