--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ h1 {
     background-color: darkgray;
     width: min-content;
     padding: 0.4em;
+    display: inline-block;
 }
 
 .button:hover {
