--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,8 @@ body {
 .container {
     margin: 1em;
     padding: 1em;
-}
-
-.table, tr {
     border: grey 2px solid;
     border-radius: 10px;
-    padding: 1em;
 }
 
 td {
@@ -55,11 +51,32 @@ h1 {
     background-color: slategray;
 }
 
-.fields-form {
-    margin: 0.5em;
+.label {
+    display: inline-block;
 }
 
-.label {
-    width:10%;
-    display: inline-block;
+
+.column {
+    width: 40%;
+}
+
+.column > .fields-form {
+    padding: 0.5em;
+    margin: 1em;
+}
+
+.column-1 {
+    width: 10em;
+}
+
+.column-2 {
+    width: 20em;
+}
+
+.column-right {
+    text-align: right;
+}
+
+.flex {
+    display: flex;
 }
